[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menus/GO.gd" type="Script" id=1]
[ext_resource path="res://Menus/SettingsMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/Itim-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="GameOver" type="CanvasLayer"]
pause_mode = 2
layer = 128

[node name="GO" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="ColorRect" parent="GO"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.667419
margin_bottom = 0.667419
color = Color( 0, 0, 0, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GO/Overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.0
margin_top = -175.0
margin_right = 212.0
margin_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
size_flags_vertical = 7
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameO" type="Label" parent="GO/Overlay/VBoxContainer"]
margin_right = 424.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER!"
align = 1
valign = 1

[node name="Score" type="Label" parent="GO/Overlay/VBoxContainer"]
margin_top = 52.0
margin_right = 424.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "Score:"
align = 1
valign = 1

[node name="_space" type="Label" parent="GO/Overlay/VBoxContainer"]
margin_top = 104.0
margin_right = 424.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="GO/Overlay/VBoxContainer"]
margin_top = 156.0
margin_right = 424.0
margin_bottom = 350.0
size_flags_horizontal = 5
size_flags_vertical = 7

[node name="Restart" type="Button" parent="GO/Overlay/VBoxContainer/VBoxContainer"]
margin_right = 424.0
margin_bottom = 45.0
size_flags_vertical = 3
text = "Restart"

[node name="Settings" type="Button" parent="GO/Overlay/VBoxContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 424.0
margin_bottom = 95.0
size_flags_vertical = 3
text = "Settings"

[node name="Main_menu" type="Button" parent="GO/Overlay/VBoxContainer/VBoxContainer"]
margin_top = 99.0
margin_right = 424.0
margin_bottom = 144.0
size_flags_vertical = 3
text = "Main Menu"

[node name="Quit" type="Button" parent="GO/Overlay/VBoxContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 424.0
margin_bottom = 194.0
size_flags_vertical = 3
text = "Quit"

[node name="SettingsMenu" parent="GO" instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="GO/Overlay/VBoxContainer/VBoxContainer/Restart" to="GO" method="_on_Restart_pressed"]
[connection signal="pressed" from="GO/Overlay/VBoxContainer/VBoxContainer/Settings" to="GO" method="_on_Settings_pressed"]
[connection signal="pressed" from="GO/Overlay/VBoxContainer/VBoxContainer/Main_menu" to="GO" method="_on_Main_menu_pressed"]
[connection signal="pressed" from="GO/Overlay/VBoxContainer/VBoxContainer/Quit" to="GO" method="_on_Quit_pressed"]
